--- a/public/questions/_show.html
+++ b/public/questions/_show.html
@@ -1,6 +1,6 @@
 <h3>Question: <span id="questionTitle"></span></h3>
 
-<div id="questionText"></div>
+<section id="questionText"></section>
 
 <button id="questionEdit">Edit question</button>
 
