Changed order of method declarations to simplify reading

--- a/public/questions/index.html
+++ b/public/questions/index.html
@@ -24,13 +24,13 @@
 <script type="text/javascript">
 var loadingTemplate = Handlebars.compile($("#loading-template").html());
 
-var displayCurrentLocation = function() {
-    var partial = "./_" + window.location.hash.replace(/^#/, "").replace(/\/.*$/, "") + ".html";
-    $("#content").html(loadingTemplate());
-    $.get(partial).then(function(html) {
-        $("#content").html(html);
-    });
-}
+$(function() {
+    $(window).bind('hashchange', displayCurrentLocation);
+    if (!window.location.hash) {
+        selectPartial('list');
+    }
+    displayCurrentLocation();
+});
 
 var selectPartial = function(partial, id) {
     window.location.hash = partial;
@@ -38,13 +38,17 @@ var selectPartial = function(partial, id) {
     displayCurrentLocation();
 }
 
-$(function() {
-    $(window).bind('hashchange', displayCurrentLocation);
-    if (!window.location.hash) {
-        window.location.hash = 'list';
-    }
-    displayCurrentLocation();
-});
+var displayCurrentLocation = function() {
+    var partial = fileFromHash(window.location.hash);
+    $("#content").html(loadingTemplate());
+    $.get(partial).then(function(html) {
+        $("#content").html(html);
+    });
+}
 
+
+var fileFromHash = function(hash) {
+    return "./_" + hash.replace(/^#/, "").replace(/\/.*$/, "") + ".html";
+};
 </script>
 </html>
